--- a/inst/Rmd/Stock/Depletion.Rmd
+++ b/inst/Rmd/Stock/Depletion.Rmd
@@ -21,13 +21,11 @@ if (params$tabs) {
 } else {
   cat('### Depletion and Discard Mortality')
 }
-Pars <- params$Pars
-dd <- dim(Pars$M_ageArray)
+dd <- dim(params$Pars$M_ageArray)
 nsim <- dd[1]
 maxage <- dd[2]
 
 nsamp <- length(params$its)
-
 
 ```
 
@@ -35,14 +33,7 @@ nsamp <- length(params$its)
 Histograms of `r nsim` simulations of depletion (spawning biomass in the last historical year over average unfished spawning biomass; `D`) and the fraction of discarded fish that are killed by fishing mortality (`Fdisc`), with vertical colored lines indicating `r nsamp` randomly drawn values.
 
 ```{r, echo=FALSE}
-par(mfrow=c(1,2))
-hist2(Pars$Stock$D, col=params$plotPars$col, axes=params$plotPars$axes, main="Depletion (D)", breaks=params$plotPars$breaks)
-abline(v=Pars$Stock$D[params$its], col=1:nsamp, lwd=params$plotPars$lwd)
-axis(side=1) 
-
-hist2(Pars$Stock$Fdisc, col=params$plotPars$col, axes=params$plotPars$axes, main="Fdisc", breaks=params$plotPars$breaks)
-abline(v=Pars$Stock$Fdisc[params$its], col=1:nsamp, lwd=params$plotPars$lwd)
-axis(side=1)
+plot.Depletion(params$Pars, nsamp=nsamp, plotPars=params$plotPars)
 ```
 
 
