--- a/inst/Rmd/Stock/Maturity.Rmd
+++ b/inst/Rmd/Stock/Maturity.Rmd
@@ -30,25 +30,10 @@ nsamp <- length(params$its)
 ```
 
 #### Sampled Parameters 
-Histograms of `r nsim` simulations of `L50` (length at 50% maturity), `L95` (length at 95% maturity), and corresponding derived age at maturity parameters (`A50` and `A95`), with vertical colored lines indicating `r nsamp` randomly drawn values used in other plots:
+Histograms of `r nsim` simulations of `L50` (length at 50% maturity), and `L95` (length at 95% maturity), with vertical colored lines indicating `r nsamp` randomly drawn values used in other plots:
 
 ```{r, echo=FALSE}
-par(mfrow=c(2,2))
-hist2(Pars$Stock$L50, col=params$plotPars$col, axes=params$plotPars$axes, main="L50", breaks=params$plotPars$breaks)
-abline(v=Pars$Stock$L50[params$its], col=1:nsamp, lwd=params$plotPars$lwd)
-axis(side=1)
-
-hist2(Pars$Stock$L95, col=params$plotPars$col, axes=params$plotPars$axes, main="L95", breaks=params$plotPars$breaks)
-abline(v=Pars$Stock$L95[params$its], col=1:nsamp, lwd=params$plotPars$lwd)
-axis(side=1)
-
-hist2(Pars$Stock$ageM, col=params$plotPars$col, axes=params$plotPars$axes, main="A50", breaks=params$plotPars$breaks)
-abline(v=Pars$Stock$ageM[params$its], col=1:nsamp, lwd=params$plotPars$lwd)
-axis(side=1)
-
-hist2(Pars$Stock$age95, col=params$plotPars$col, axes=params$plotPars$axes, main="A95", breaks=params$plotPars$breaks)
-abline(v=Pars$Stock$age95[params$its], col=1:nsamp, lwd=params$plotPars$lwd)
-axis(side=1)
+plot.Maturity(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
 
 ```
 
@@ -57,20 +42,7 @@ Maturity-at-age and -length for `r nsamp` simulations in the first historical ye
 and the last projected year:
 
 ```{r, echo=FALSE}
-par(mfrow=c(1,2))
-slope <- log(19)/(Pars$Stock$L95-Pars$Stock$L50)
-Ls <- seq(0, to=max(Pars$Stock$Linf), length.out=200)
-maxage <- Pars$Stock$maxage
-
-Mat_len <- sapply(params$its, function(X)  plogis(Ls, Pars$Stock$L50[X], 1/slope[X]))
-matplot(Ls, Mat_len, type="l", bty="l", main="Maturity-at-length", lwd=params$plotPars$lwd, lty=1, 
-        ylab="Probability", xlab="Length", ylim=c(0,1), xpd=NA)
-
-matplot(0:maxage, t(Pars$Stock$Mat_age[params$its,,nyears]), type="l", bty="l", main="Maturity-at-age", lwd=params$plotPars$lwd, 
-        lty=1, axes=FALSE, xlim=c(0, max(Pars$Stock$maxage)), ylab="", xlab="Age", ylim=c(0,1), xpd=NA)
-axis(side=1)
-axis(side=2, labels=FALSE)
-
+plot.Maturity(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=2)
 ```
 
 
