--- a/inst/Rmd/Stock/Spatial.Rmd
+++ b/inst/Rmd/Stock/Spatial.Rmd
@@ -35,18 +35,6 @@ nsamp <- length(params$its)
 Histograms of `r nsim` simulations of size of area 1 (`Size_area_1`), fraction of unfished biomass in area 1 (`Frac_area_1`), and the probability of staying in area 1 in a year (`Frac_area_1`), with vertical colored lines indicating `r nsamp` randomly drawn values used in other plots:
 
 ```{r, echo=FALSE}
-par(mfrow=c(1,3))
-hist2(Pars$Stock$Size_area_1, col=params$plotPars$col, axes=params$plotPars$axes, main="Size_area_1", breaks=params$plotPars$breaks)
-abline(v=Pars$Stock$Size_area_1[params$its], col=1:nsamp, lwd=params$plotPars$lwd)
-axis(side=1)  
-
-hist2(Pars$Stock$Frac_area_1, col=params$plotPars$col, axes=params$plotPars$axes, main="Frac_area_1", breaks=params$plotPars$breaks)
-abline(v=Pars$Stock$Frac_area_1[params$its], col=1:nsamp, lwd=params$plotPars$lwd)
-axis(side=1) 
-
-hist2(Pars$Stock$Prob_staying, col=params$plotPars$col, axes=params$plotPars$axes, main="Prob_staying", breaks=params$plotPars$breaks)
-abline(v=Pars$Stock$Prob_staying[params$its], col=1:nsamp, lwd=params$plotPars$lwd)
-axis(side=1)
-
+plot.Spatial(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
 ```
 
