--- a/inst/Rmd/Fleet/Effort.Rmd
+++ b/inst/Rmd/Fleet/Effort.Rmd
@@ -35,12 +35,7 @@ proyears <- params$proyears
 Histograms of `r nsim` simulations of inter-annual variability in historical fishing mortality (`Esd`), with vertical colored lines indicating `r nsamp` randomly drawn values used in the time-series plot:
 
 ```{r Eff_parameters, echo=FALSE}
-par(mfrow=c(1,1))
-
-hist2(Pars$Fleet$Esd, col=params$plotPars$col, axes=params$plotPars$axes, main="Esd", breaks=params$plotPars$breaks)
-abline(v=Pars$Fleet$Esd[params$its], col=1:nsamp, lwd=params$plotPars$lwd)
-axis(side=1) 
-
+plot.Effort(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
 ```
 
 
