--- a/inst/Rmd/Hist/Hist.Rmd
+++ b/inst/Rmd/Hist/Hist.Rmd
@@ -218,7 +218,7 @@ matplot(Years, t(Depletion),
         ylim=ylim, yaxs = 'i', axes=F)
 axis(side=1)
 maxL <- ceiling(max(ylim/0.5))*0.5
-yax <- seq(0, maxL, by=0.25)
+yax <- seq(0, maxL, by=0.25*maxL)
 axis(side=2, at=yax, las=1)
 
 abline(h=yax, lwd=1, col="lightgray")
