update dev verison
- changes to Rmds
- fix bug in MSY update call

--- a/inst/Rmd/Fleet/MPA.Rmd
+++ b/inst/Rmd/Fleet/MPA.Rmd
@@ -97,7 +97,7 @@ CURRENTLY NOT IMPLEMENTED !
 Histograms of `r nsim` simulations of spatial targeting parameter (`Spat_targ`), with vertical colored lines indicating `r nsamp` randomly drawn values:
 
 ```{r spatial_targeting, echo=FALSE}
-plot.MPA(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
+MSEtool:::plot.MPA(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
 
 ```
 
