--- a/inst/Rmd/Fleet/Catchability.Rmd
+++ b/inst/Rmd/Fleet/Catchability.Rmd
@@ -33,7 +33,7 @@ nsamp <- length(params$its)
 Histograms of `r nsim` simulations of inter-annual variability in fishing efficiency (`qcv`) and average annual change in fishing efficiency (`qinc`), with vertical colored lines indicating `r nsamp` randomly drawn values used in the time-series plot:
 
 ```{r q_parameters, echo=FALSE}
-plot.Catchability(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
+MSEtool:::plot.Catchability(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
 ```
 
 
@@ -41,5 +41,5 @@ plot.Catchability(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1
 Time-series plot showing `r nsamp` trends in future fishing efficiency (catchability):
 
 ```{r q_time-series, echo=FALSE}
-plot.Catchability(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=2)
+MSEtool:::plot.Catchability(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=2)
 ```
