--- a/inst/Rmd/Fleet/Effort.Rmd
+++ b/inst/Rmd/Fleet/Effort.Rmd
@@ -35,7 +35,7 @@ proyears <- params$proyears
 Histograms of `r nsim` simulations of inter-annual variability in historical fishing mortality (`Esd`), with vertical colored lines indicating `r nsamp` randomly drawn values used in the time-series plot:
 
 ```{r Eff_parameters, echo=FALSE}
-plot.Effort(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
+MSEtool:::plot.Effort(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
 ```
 
 
