--- a/inst/Rmd/Stock/Depletion.Rmd
+++ b/inst/Rmd/Stock/Depletion.Rmd
@@ -33,7 +33,7 @@ nsamp <- length(params$its)
 Histograms of `r nsim` simulations of depletion (spawning biomass in the last historical year over average unfished spawning biomass; `D`) and the fraction of discarded fish that are killed by fishing mortality (`Fdisc`), with vertical colored lines indicating `r nsamp` randomly drawn values.
 
 ```{r, echo=FALSE}
-plot.Depletion(params$Pars, nsamp=nsamp, plotPars=params$plotPars)
+MSEtool:::plot.Depletion(params$Pars, nsamp=nsamp, plotPars=params$plotPars)
 ```
 
 
