--- a/inst/Rmd/Stock/Maturity.Rmd
+++ b/inst/Rmd/Stock/Maturity.Rmd
@@ -33,7 +33,7 @@ nsamp <- length(params$its)
 Histograms of `r nsim` simulations of `L50` (length at 50% maturity), and `L95` (length at 95% maturity), with vertical colored lines indicating `r nsamp` randomly drawn values used in other plots:
 
 ```{r, echo=FALSE}
-plot.Maturity(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
+MSEtool:::plot.Maturity(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
 
 ```
 
@@ -42,7 +42,7 @@ Maturity-at-age and -length for `r nsamp` simulations in the first historical ye
 and the last projected year:
 
 ```{r, echo=FALSE}
-plot.Maturity(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=2)
+MSEtool:::plot.Maturity(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=2)
 ```
 
 
