--- a/inst/Rmd/Stock/Recruitment.Rmd
+++ b/inst/Rmd/Stock/Recruitment.Rmd
@@ -38,7 +38,7 @@ if (Pars$Stock$SRrel[1] == 2) SR <- "Ricker"
 Histograms of `r nsim` simulations of steepness (`h`), recruitment process error (`Perr`) and auto-correlation (`AC`) for the `r SR` stock-recruitment relationship, with vertical colored lines indicating `r nsamp` randomly drawn values used in other plots:
 
 ```{r, echo=FALSE}
-plot.Recruitment(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
+MSEtool:::plot.Recruitment(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
 ```
 
 #### Time-Series
@@ -46,7 +46,7 @@ Time-series plot showing `r nsamp` samples of recruitment deviations for histori
 
 ```{r, echo=FALSE}
 
-plot.Recruitment(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=2)
+MSEtool:::plot.Recruitment(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=2)
 
 ```
 
