--- a/inst/Rmd/Stock/Spatial.Rmd
+++ b/inst/Rmd/Stock/Spatial.Rmd
@@ -35,6 +35,6 @@ nsamp <- length(params$its)
 Histograms of `r nsim` simulations of size of area 1 (`Size_area_1`), fraction of unfished biomass in area 1 (`Frac_area_1`), and the probability of staying in area 1 in a year (`Frac_area_1`), with vertical colored lines indicating `r nsamp` randomly drawn values used in other plots:
 
 ```{r, echo=FALSE}
-plot.Spatial(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
+MSEtool:::plot.Spatial(params$Pars, nsamp=nsamp, plotPars=params$plotPars, plot.num=1)
 ```
 
