--- a/inst/Rmd/OM/OM.Rmd
+++ b/inst/Rmd/OM/OM.Rmd
@@ -34,7 +34,11 @@ rmd.files <- c("../Stock/Stock.Rmd",
                "../Hist/Hist.Rmd")
 
 out <- NULL
+i <- 0
 for (rmd in rmd.files) {
+  i <- i + 1
+  if (identical(rmarkdown::metadata$runtime, "shiny"))
+    shiny::setProgress(i/length(rmd.files))
   out <- c(out, knitr::knit_child(rmd))
 }
 ```
