--- a/inst/Rmd/OM/OM.Rmd
+++ b/inst/Rmd/OM/OM.Rmd
@@ -35,12 +35,16 @@ rmd.files <- c("../Stock/Stock.Rmd",
 
 out <- NULL
 i <- 0
+
 for (rmd in rmd.files) {
   i <- i + 1
-  if (shiny::isRunning())
-    shiny::setProgress(i/length(rmd.files))
+  if (require('shiny', quietly=TRUE)) {
+    if (shiny::isRunning())
+      shiny::setProgress(i/length(rmd.files))
+  }  
   out <- c(out, knitr::knit_child(rmd))
 }
+
 ```
 
 
